--- a/action.yml
+++ b/action.yml
@@ -16,6 +16,21 @@ inputs:
   date-id:
     description: ""
     required: true
+  base-download-url:
+    description: ""
+    required: false
+  mac-notion-id:
+    description: ""
+    required: false
+  mac-file-path:
+    description: ""
+    required: false
+  win-notion-id:
+    description: ""
+    required: false
+  win-file-path:
+    description: ""
+    required: false
 runs:
   using: "node16"
   main: "dist/index.js"
